load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/weixiao-huang/bazel-gpu-monitoring-tools
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

go_library(
    name = "bazel-gpu-monitoring-tools_lib",
    srcs = ["main.go"],
    importpath = "github.com/weixiao-huang/bazel-gpu-monitoring-tools",
    visibility = ["//visibility:private"],
    deps = ["@com_github_nvidia_gpu_monitoring_tools//bindings/go/nvml"],
)

go_binary(
    name = "bazel-gpu-monitoring-tools",
    embed = [":bazel-gpu-monitoring-tools_lib"],
    visibility = ["//visibility:public"],
)
